--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "fs-extra": "^11.2.0",
     "lodash": "^4.17.21",
     "multer": "^1.4.4",
     "nanoid": "^3.3.6",
